# GageRnR

./: .flake8  .gitignore  LICENSE  Makefile  README.md  data.py  example.py  gaugeRnR.py  generator.py  main.py  requirements.txt  setup.cfg  setup.py  stats.py  test.py  tox.ini
.github/workflows/: pythonpackage.yml  pythonpublish.yml
GageRnR/: __init__.py  application.py  dataLoader.py  gageRnR.py  generator.py  linearity.py  normality.py  reportGenerator.py  statistics.py
GageRnR/resources/: GageRnR.html  Linearity.html
GageRnR/tests/: data.py  test_application.py  test_dataLoader.py  test_gaugeRnR.py  test_generator.py  test_linearity.py  test_normality.py  test_statistics.py
GaugeRnR/: __init__.py  __main__.py  application.py  dataLoader.py  gaugeRnR.py  generator.py  linearity.py  normality.py  reportGenerator.py  statistics.py
GaugeRnR/resources/: Normality.html  Statistics.html
GaugeRnR/tests/: test_application.py  test_dataLoader.py  test_gaugeRnR.py  test_generator.py  test_linearity.py  test_normality.py  test_statistics.py
data/: data_demoGRnR.csv  data_mXop.csv  data_opXm.csv  data_poXm.csv
example/: context.py  example.py  generator.py
pip/: requirements-dev.txt  requirements.txt
tests/: context.py  data.py  test.py  test_application.py  test_gaugeRnR.py  test_gaugernr.py  test_generator.py
