[metadata]
name            = GaugeRnR
version         = 0.1.2
author          = Alexander Poole
author-email    = alex.o.poole@gmail.com
summary         = A simple library for calculating Gauge RnR
description     = A simple library for calculating Gauge RnR
long-description = file: README.md
long-description-content-type = text/markdown
requires-python = >=3.5
project_urls =
    Source Code = https://github.com/owodunni/GaugeRnR
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Mathematics
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    statistics gagueR&R gageRnR anova
